--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -74,7 +74,8 @@
 			margin-top: 2vw;
 			display: block;
 			font-family: helvetica_bold;
-			font-size: clamp(4px,5vw,40px);;
+			font-size: clamp(4px,5vw,40px);
+			padding: 2px;
 		}
 		.knapp:hover{
 			background: black;
