--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -106,7 +106,7 @@
 			var t = document.getElementById('password_input').value;
 			t = t.trim();
 			t = t.toLowerCase();
-			t = t.replace(/ /,"");
+			t = t.replaceAll(" ","");
 			console.log(t);
 			if(t == "tungomålochvändningar"){window.location.href = "/drakens-värld";}
 		}
