--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -108,7 +108,7 @@
 			t = t.toLowerCase();
 			t = t.replaceAll(" ","");
 			console.log(t);
-			if(t == "tungomålochvändningar"){window.location.href = "/drakens-värld";}
+			if(t == "tungomålochvändningar"){window.location.href = "/";}
 		}
 	</script>
 </body>
