--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -43,8 +43,8 @@
 			color: white;
 			font-family: morfeta;
 			text-align: center;
-			font-size: 4em;
-			margin-top: 3vw;
+			font-size: 40px;
+			margin-top: 30px;
 			margin-bottom: 2vw;
 			line-height: 1;
 		}
@@ -71,7 +71,7 @@
 			color: black;
 			margin-left: auto;
 			margin-right: auto;
-			margin-top: 4vw;
+			margin-top: 20px;
 			display: block;
 			font-family: helvetica_bold;
 			font-size: clamp(4px,5vw,40px);
