--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -43,7 +43,7 @@
 			color: white;
 			font-family: morfeta;
 			text-align: center;
-			font-size: 40px;
+			font-size: 4em;
 			margin-top: 30px;
 			margin-bottom: 2vw;
 			line-height: 1;
