--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -106,7 +106,7 @@
 			t = t.toLowerCase();
 			t = t.replaceAll(" ","");
 			console.log(t);
-			if(t == "tungomålochvändningar"){window.location.href = "/";}
+			if(t == "tungomålochvändningar"){window.location.href = "/ghk413naesfpkm";}
 		}
 	</script>
 </body>
