--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -45,7 +45,7 @@
 			text-align: center;
 			font-size: 4em;
 			margin-top: 30px;
-			margin-bottom: 2vw;
+			margin-bottom: 20px;
 			line-height: 1;
 		}
 		.lösen{
