--- a/header.html
+++ b/header.html
@@ -100,6 +100,7 @@
 		            			<a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
 		            		</div>`
 			document.getElementById("knappar").innerHTML = _html;
+			console.log(_html);
 		</script>
 	
 		
