--- a/header.html
+++ b/header.html
@@ -80,6 +80,7 @@
 		}
 
 		var isMobile = detectMob();
+		console.log("header mobile");
 	</script>
 	    
         <div class = head_div>
@@ -100,7 +101,7 @@
 		            			<a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
 		            		</div>`
 			document.getElementById("knappar").innerHTML = _html;
-			console.log(_html);
+			console.log("header knappar");
 		</script>
 	
 		
