--- a/header.html
+++ b/header.html
@@ -90,19 +90,14 @@
             </a>
             </div> 
 
-		<div id = "knappar"></div>
-		
-		<script>
-			var _html = 	`<div class = left_div>
-			            		<a href = "/" class = head_cont>GAFFEL MAGASIN</a>
-			        	</div>
+		<div class = left_div>
+			<a href = "/" class = head_cont>GAFFEL MAGASIN</a>
+		</div>
+	
+		<div class = right_div>
+			<a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
+		</div>
 
-		           		<div class = right_div>
-		            			<a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
-		            		</div>`
-			document.getElementById("knappar").innerHTML = _html;
-			console.log("header knappar");
-		</script>
 	
 		
         </div>
