--- a/header.html
+++ b/header.html
@@ -96,6 +96,18 @@
 	
 		<div class = right_div>
 			<a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
+			<nav>
+			  <input type="checkbox" id="check">
+			  <label for="check">
+			    <i></i>
+			  </label>
+			  <div">
+			    <a href="#">Home</a>
+			    <a href="#">About</a>
+			    <a href="#">Services</a>
+			    <a href="#">Contact</a>
+			  </div>
+			</nav>
 		</div>
 
 	
