--- a/header.html
+++ b/header.html
@@ -48,9 +48,10 @@
 	  float: left;
           color: white;
           text-align: center;
-          padding: 14px 1vw;
+          padding: 14px;
           text-decoration: none;
           font-size: 1.0em;
+	  line-height: 1em;
 	  height: 100%;
         }
 
