--- a/header.html
+++ b/header.html
@@ -50,7 +50,7 @@
           text-align: center;
           text-decoration: none;
           font-size: 1em;
-	  line-height: 1em;
+	  line-height: 100%;
 	  height: 100%;
         }
 
