--- a/header.html
+++ b/header.html
@@ -31,6 +31,7 @@
             margin-left: 5vw;
             float: left;
 	    height: 100%;
+	    display: inline;
         }
         .right_div{
             background: black;
@@ -38,6 +39,7 @@
             margin-right: 6vw;
             float: right;
             height: 100%;
+	    display: inline;
         }
         .logga{
             background: #00000000;
@@ -49,9 +51,10 @@
           color: white;
           text-align: center;
           text-decoration: none;
-          font-size: 1em;
-	  line-height: 100%;
-	  height: 100%;
+          font-size: 1em; 
+	  display: block;
+	  background-color: black;
+  	   padding: 14px 16px;
         }
 
         .head_cont:hover {
