--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
 
         .head_div{
             width: 100%;
-            height: 55px;
+            height: 45px;
             background: black;
             display: inline-block;
 		  overflow: hidden;
@@ -51,10 +51,10 @@
           color: white;
           text-align: center;
           text-decoration: none;
-          font-size: 1em; 
+          font-size: 0.9em;
+	  height: 100%
 	  display: block;
 	  background-color: black;
-  	   padding: 14px 16px;
         }
 
         .head_cont:hover {
@@ -89,7 +89,7 @@
         <div class = head_div>
             <div class = left_div>
             <a href="/" class = logga>
-              <img src="https://i.imgur.com/jR8JHqv.png" alt="GAFFEL" style="width:50px;height:50px;">
+              <img src="https://i.imgur.com/jR8JHqv.png" alt="GAFFEL" style="width:45px;height:45px;">
             </a>
             </div> 
 
