--- a/header.html
+++ b/header.html
@@ -89,7 +89,7 @@
         <div class = head_div>
             <div class = left_div>
             <a href="/" class = logga>
-              <img src="https://i.imgur.com/jR8JHqv.png" alt="GAFFEL" style="width:50px;height:50px;">
+              <img src="https://i.imgur.com/sl7WxVu.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
             </div> 		
         </div>
