--- a/header.html
+++ b/header.html
@@ -61,6 +61,22 @@
           background-color: white;
           color: black;
         }
+
+	ul {
+	  list-style-type: none;
+	  margin: 0;
+	  padding: 0;
+	}
+	
+	li {
+	  display: inline;
+	}
+	
+	knapp {
+	  display: block;
+	  padding: 8px;
+	  background-color: #dddddd;
+	}
             
         </style>
     </head>
@@ -91,7 +107,16 @@
             <a href="/" class = logga>
               <img src="https://i.imgur.com/sl7WxVu.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
-            </div> 		
+            </div>
+	
+	<div class = left_div>
+		<ul>
+		  <li><a href="#home">Home</a></li>
+		  <li><a href="#news">News</a></li>
+		  <li><a href="#contact">Contact</a></li>
+		  <li><a href="#about">About</a></li>
+		</ul>
+	</div>
         </div>
     </body>
 </html>
