--- a/header.html
+++ b/header.html
@@ -74,8 +74,10 @@
 	
 	knapp {
 	  display: block;
-	  padding: 8px;
-	  background-color: #dddddd;
+	  color: white;
+	  text-align: center;
+	  padding: 14px 16px;
+	  text-decoration: none;
 	}
             
         </style>
@@ -111,10 +113,9 @@
 	
 	<div class = left_div>
 		<ul>
-		  <li><a href="#home">Home</a></li>
-		  <li><a href="#news">News</a></li>
-		  <li><a href="#contact">Contact</a></li>
-		  <li><a href="#about">About</a></li>
+		  <li><a href="/" class = "knapp">Home</a></li>
+		  <li><a href="/drakens-värld" class = "knapp">News</a></li>
+		  <li><a href="/hemliga-klubben-inlogg" class = "knapp">Contact</a></li>
 		</ul>
 	</div>
         </div>
