--- a/header.html
+++ b/header.html
@@ -68,12 +68,9 @@
 	  padding: 0;
 	}
 	
-	li {
+
+	knapp {	
 	  display: inline;
-	}
-	
-	knapp {
-	  display: block;
 	  color: white;
 	  text-align: center;
 	  padding: 14px 16px;
@@ -113,9 +110,9 @@
 	
 	<div class = left_div>
 		<ul>
-		  <li><a href="/" class = "knapp">Home</a></li>
-		  <li><a href="/drakens-värld" class = "knapp">News</a></li>
-		  <li><a href="/hemliga-klubben-inlogg" class = "knapp">Contact</a></li>
+		  <li  class = "knapp"><a href="/">Home</a></li>
+		  <li  class = "knapp"><a href="/drakens-värld">News</a></li>
+		  <li  class = "knapp"><a href="/hemliga-klubben-inlogg">Contact</a></li>
 		</ul>
 	</div>
         </div>
