--- a/header.html
+++ b/header.html
@@ -45,25 +45,13 @@
             background: #00000000;
             display:inline-block;
         }
-        .head_cont{
-          font-family: Helvetica-Bold;
-	  float: left;
-          color: white;
-          text-align: center;
-          text-decoration: none;
-          font-size: 0.9em;
-	  height: 100%
-	  display: block;
-	  background-color: black;
-        }
-
-        .head_cont:hover {
-          background-color: white;
-          color: black;
-        }
-
-
-            
+        .knapp{
+		display: inline-block;
+		background-color: black;
+		color: white;
+		height: 50px;
+		line-height: 50px;
+	}
         </style>
     </head>
     <body>
@@ -96,7 +84,9 @@
             </div>
 	
 	<div class = left_div>
-
+		<a class = "knapp" href="/">knapp</a>
+		<a class = "knapp" href="/">knapp</a>
+		<a class = "knapp" href="/">knapp1</a>
 	</div>
         </div>
     </body>
