--- a/header.html
+++ b/header.html
@@ -48,9 +48,17 @@
         .knapp{
 		display: inline-block;
 		background-color: black;
+		padding: 0px; 10px;
+		
+		font-family: Helvetica-Bold;
+		text-decoration: none;
 		color: white;
 		height: 50px;
 		line-height: 50px;
+	}
+	.knapp:hover{
+		color: black;
+		background-color: white;
 	}
         </style>
     </head>
