--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 			<img src = "bilder/logga_morf_vit.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
-				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','är du farlig?','din kajplats i etern','gonzo','journal de pop culture de la côte occidentale'];
+				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','är du farlig?','din kajplats i etern','gonzo','felrättsnetthelträttsnett'];
 				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
 				console.log(ny_slogan);
 				document.getElementById('slogan').innerHTML = ny_slogan;
