--- a/header.html
+++ b/header.html
@@ -48,7 +48,7 @@
         .knapp{
 		display: inline-block;
 		background-color: black;
-		padding: 0px; 10px;
+		padding: 0px 10px;
 		
 		font-family: Helvetica-Bold;
 		text-decoration: none;
