--- a/header.html
+++ b/header.html
@@ -92,9 +92,9 @@
             </div>
 	
 	<div class = left_div>
-		<a class = "knapp" href="/">knapp</a>
-		<a class = "knapp" href="/">knapp</a>
-		<a class = "knapp" href="/">knapp1</a>
+		<a class = "knapp" href="/">HEM</a>
+		<a class = "knapp" href="/">DRAKENS VÄRLD</a>
+		<a class = "knapp" href="/">HEMLIGT</a>
 	</div>
         </div>
     </body>
