--- a/header.html
+++ b/header.html
@@ -93,8 +93,10 @@
 	
 	<div class = left_div>
 		<a class = "knapp" href="/">HEM</a>
-		<a class = "knapp" href="/">DRAKENS VÄRLD</a>
-		<a class = "knapp" href="/">HEMLIGT</a>
+	</div>
+	<div class = left_div>
+		<a class = "knapp" href="/drakens-värld">DRAKENS VÄRLD</a>
+		<a class = "knapp" href="/hemliga-klubben-inlogg">HEMLIGT</a>
 	</div>
         </div>
     </body>
