--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -3,10 +3,9 @@
  
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Hemliga klubben</title>
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<style>
 		@font-face {
 		  font-family: newsagent;
