--- a/header.html
+++ b/header.html
@@ -45,7 +45,7 @@
             background: #00000000;
             display:inline-block;
         }
-        .knapp{
+        .navlink{
 		display: inline-block;
 		background-color: black;
 		padding: 0px 10px;
@@ -56,7 +56,7 @@
 		height: 50px;
 		line-height: 50px;
 	}
-	.knapp:hover{
+	.navlink:hover{
 		color: black;
 		background-color: white;
 	}
@@ -92,11 +92,11 @@
             </div>
 	
 	<div class = left_div>
-		<a class = "knapp" href="/">HEM</a>
+		<a class = "navlink" href="/">HEM</a>
 	</div>
 	<div class = left_div>
-		<a class = "knapp" href="/drakens-värld">DRAKENS VÄRLD</a>
-		<a class = "knapp" href="/hemliga-klubben-inlogg">HEMLIGT</a>
+		<a class = "navlink" href="/drakens-värld">DRAKENS VÄRLD</a>
+		<a class = "navlink" href="/hemliga-klubben-inlogg">HEMLIGT</a>
 	</div>
         </div>
     </body>
