--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main43'><script>draw_article_button('main43','int-civilpolis',isMobile)</script></div>
 			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
-			<div id = 'main41'><script>draw_article_button('main41','la-la-guldbaggen',isMobile)</script></div>
-			<div id = 'main40'><script>draw_article_button('main40','vertikala-cineaster',isMobile)</script></div>	
+			<div id = 'main41'><script>draw_article_button('main41','vertikala-cineaster',isMobile)</script></div>	
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-feb-25',isMobile)</script></div>
@@ -286,6 +286,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>
+			<div id = 'main40'><script>draw_article_button('main40','la-la-guldbaggen',isMobile)</script></div>
 			<div id = 'main39'><script>draw_article_button('main39','a-day-at-the-races',isMobile)</script></div>
 			<div id = 'main38'><script>draw_article_button('main38','några-militära-nyord',isMobile)</script></div>	
 			<div id = 'main37'><script>draw_article_button('main37','j-accuse-valhallabadet',isMobile)</script></div>
