--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -22,7 +22,8 @@
 		}
 
 		body{
-			background: red;
+			background-image: url("floral_pattern.png");
+  			background-repeat: repeat;
 			
 			margin: 0px;
 			padding: 0px;
