--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -22,7 +22,7 @@
 		}
 
 		body{
-			background-image: url("floral_pattern.png");
+			background-image: url("bilder/floral_pattern.png");
   			background-repeat: repeat;
 			
 			margin: 0px;
