--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -24,6 +24,7 @@
 		body{
 			background-image: url("bilder/floral_pattern.png");
   			background-repeat: repeat;
+			background-size: 50%;
 			
 			margin: 0px;
 			padding: 0px;
