--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -40,7 +40,16 @@
 			margin: 5px;
 		}
 
-
+		.text{
+			color: white;
+			font-size: 1.2 em;
+			
+			background: black;
+			padding: 20px;
+			width: 40%;
+			margin: auto;
+		}
+		
 	</style>
 
 </head>
@@ -54,6 +63,7 @@
 			});
 	  </script></div>
 
+	  <p class = "text">Det här är Gaffels hemliga klubb. Om du har tagit dig hit ber vi dig att hålla tyst om det hela.</p>
 </body>
- 
+ 	
 </html>
