--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -42,11 +42,12 @@
 
 		.text{
 			color: white;
-			font-size: 1.2 em;
+			font-size: 1.5 em;
 			
 			background: black;
 			padding: 20px;
 			width: 40%;
+			margin-top: 20px;
 			margin: auto;
 		}
 		
