--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -46,7 +46,7 @@
 			
 			background: black;
 			padding: 20px;
-			width: 40%;
+			width: clamp(50px,90%,500px);
 			margin-top: 20px;
 			margin: auto;
 		}
