--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -65,6 +65,7 @@
 	  </script></div>
 
 	  <p class = "text">Det här är Gaffels hemliga klubb. Om du har tagit dig hit ber vi dig att hålla tyst om det hela.</p>
+	<p class = "text">Vill du tipsa gaffel kan du maila oss eller lämna över dina uppgifter till en av våra korrespondenter.</p>
 </body>
  	
 </html>
