--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-feb-25',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-mar-25',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -260,11 +260,11 @@
 			<div id = 'main41'><script>draw_article_button('main41','vertikala-cineaster',isMobile)</script></div>	
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','inne-ute-feb-25',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','inne-ute-mar25',isMobile)</script></div>
 			<div style = "display: grid;">
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-jan-25'>JANUARI</a>	
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-dec-24'>DECEMBER</a>
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-nov-24'>NOVEMBER</a>											
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-feb-25'>FEBRUARI</a>	
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-jan-25'>JANUARI</a>
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-dec-24'>DECEMBER</a>											
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
