--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 			<div id = 'main41'><script>draw_article_button('main41','vertikala-cineaster',isMobile)</script></div>	
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','inne-ute-mar25',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','inne-ute-mar-25',isMobile)</script></div>
 			<div style = "display: grid;">
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-feb-25'>FEBRUARI</a>	
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-jan-25'>JANUARI</a>
