--- a/header.html
+++ b/header.html
@@ -51,6 +51,7 @@
 		padding: 0px 10px;
 		
 		font-family: Helvetica-Bold;
+		font-size: 1em;
 		text-decoration: none;
 		color: white;
 		height: 50px;
