--- a/header.html
+++ b/header.html
@@ -6,6 +6,10 @@
 		  font-family: Helvetica-Bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
 	}
+	 @font-face {
+		  font-family: Atkinson-Bold;
+		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
+	}
 	@font-face {
 		 font-family: Bobbie-Sans;
 		  src: url(font/BNBobbieSans.otf) format("opentype");
@@ -50,7 +54,7 @@
 		background-color: black;
 		padding: 0px 10px;
 		
-		font-family: Helvetica-Bold;
+		font-family: Atkinson-Bold;
 		font-size: 0.8em;
 		text-decoration: none;
 		color: white;
