--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -3,6 +3,7 @@
     <head>
         <title>Drakens Värld</title>
         <meta name="description" content="Gaffel är det enda magasinet som du kan spela Drakens värld på.">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
         <style>
           body{
             background: #044827FF;
