--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -19,6 +19,10 @@
 		  font-family: helvetica_bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
 		}
+		 @font-face {
+		  font-family: Atkinson-Bold;
+		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
+		}
 
 		body{
 			background: black;
@@ -30,7 +34,7 @@
 		}
 
 		h1{
-			font-family: helvetiva_bold;
+			font-family: Atkinson-Bold;
 			font-size: 30px;
 			color: white;
 			font-weight: 400;
@@ -51,9 +55,10 @@
 			margin-left: auto;
 			margin-right: auto;
 			display: block;
-			font-family: helvetica_bold;
+			font-family: Atkinson-Bold;
 			font-size: clamp(10px,7vw,40px);;
 			width: clamp(100px,80%,500px);
+			padding: 2px;
 		}
 		.bild{
 			margin-left: auto;
@@ -72,9 +77,9 @@
 			margin-right: auto;
 			margin-top: 20px;
 			display: block;
-			font-family: helvetica_bold;
+			font-family: Atkinson-Bold;
 			font-size: clamp(4px,5vw,40px);
-			padding: 2px;
+			padding: 5px;
 		}
 		.knapp:hover{
 			background: black;
