--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 		  font-family: helvetica_bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
 		}
+		 @font-face {
+		  font-family: Atkinson-Bold;
+		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
+		}
 
 		body{
 			background-color: #044827FF;
@@ -58,14 +62,14 @@
 		}
 
 		h1{
-			font-family: helvetica_bold;
+			font-family: Atkinson-Bold;
 			font-size: 30px;
 			color: white;
 			font-weight: 400;
 			margin: 15px;
 		}
 		h2{
-			font-family: helvetica_bold;
+			font-family: Atkinson-Bold;
 			font-size: 50px;
 			line-height: 40px;
 			color: white;
@@ -110,7 +114,7 @@
 
 			background: #044827FF;
 			padding: 20px 40px;
-			font-family: helvetica_bold;
+			font-family: Atkinson-Bold;
 			color: white;
 			font-size: clamp(5px,5vw,25px);
 			text-align: center;
@@ -122,7 +126,7 @@
 			height: auto;
 		}
 		.artikel_knapp{
-			font-family: helvetica_bold;
+			font-family: Atkinson-Bold;
 			font-size: 20px;
 			color: white;
 			margin-top: 5px;
@@ -339,7 +343,7 @@
 		    margin-top: 15px;
 		  }
 		  .sid_cont{
-		          font-family: Helvetica-Bold;
+		          font-family: Atkinson-Bold;
 		          color: white;
 		          text-align: left;
 		          text-decoration: none;
