--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -34,7 +34,7 @@
 	</script>
         <div class = game>
 
-	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld" style="border-style: none; height: 0; overflow: hidden"onload="resizeIframe(this)" /></iframe>
+	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld" style="border-style: none; height: 0; overflow: hidden"onload="resizeIframe(this)"></iframe>
         </div>
     </body>
 </html>
