--- a/artikel.html
+++ b/artikel.html
@@ -22,6 +22,10 @@
 		  font-family: helvetica_bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
 		}
+		@font-face {
+		  font-family: Atkinson-Bold;
+		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
+		}
 		body{
 			background-color: #001015FF;
 			
@@ -50,7 +54,7 @@
                   margin-right: 5%; 
             }
             .ingress{
-                  font-family: helvetica_bold;
+                  font-family: Atkinson-Bold;
                   font-weight: 400;
                   
                   padding-top: 2%;
@@ -65,7 +69,7 @@
             }
 
 	    .data{
-		   font-family: helvetica_bold;
+		   font-family: Atkinson-Bold;
                   font-weight: 400;
 		    font-size: 1em;
 		    line-height: 1em;
