--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 	  gtag('config', 'G-HR8REX9FGG');
 	</script>-->
 
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-WM4CVP9Q');</script>
+	<!-- End Google Tag Manager -->
+	
 	<link rel="stylesheet" id="silktide-consent-manager-css" href="cookies/silktide-consent-manager.css">
 	<script src="cookies/silktide-consent-manager.js"></script>
 	<script>
@@ -241,6 +249,10 @@
 </head>
  
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WM4CVP9Q"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<script src = "script_closed.js"></script>
 	
 	<div id = 'web-header'><script> 
