--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
  
 <head>
 	<!-- Google tag (gtag.js) -->
-	<!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-HR8REX9FGG"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-HR8REX9FGG"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 	
 	  gtag('config', 'G-HR8REX9FGG');
-	</script>-->
+	</script>
 
 	<script>
 	  // Initialize the dataLayer
