--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	      preferencesButtonAccessibleLabel: "Inställningar"
 	    },
 	    preferences: {
-	      title: "Customize your cookie preferences",
+	      title: "Ändra dina cookies-inställningar",
 	      description: "<p>Som en fri själ kan du såklart säga nej till att bli massövervakad av Gaffel, än så länge. Välj nedan vilka <i>cookies</i>&nbsp;du vill använda.</p>",
 	      creditLinkText: "Mer om själva rutan",
 	      creditLinkAccessibleLabel: "Mer om själva rutan"
