--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 	      }
 	    },
 	    {
-	      id: "advertising",
-	      name: "Reklam",
+	      id: "reklam",
+	      name: "reklam",
 	      description: "<p>Sälj din data, om du vill.</p>",
 	      required: false,
 	      onAccept: function() {
