--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	    },
 	    {
 	      id: "reklam",
-	      name: "reklam",
+	      name: "Reklam",
 	      description: "<p>Sälj din data, om du vill.</p>",
 	      required: false,
 	      onAccept: function() {
