--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 	    preferences: {
 	      title: "Ändra dina cookies-inställningar",
 	      description: "<p>Som en fri själ kan du såklart säga nej till att bli massövervakad av Gaffel, än så länge. Välj nedan vilka <i>cookies</i>&nbsp;du vill använda.</p>",
-	      creditLinkText: "Mer om själva rutan",
-	      creditLinkAccessibleLabel: "Mer om själva rutan"
+	      creditLinkText: "",
+	      creditLinkAccessibleLabel: ""
 	    }
 	  }
 	});
