--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	    {
 	      id: "reklam",
 	      name: "Reklam",
-	      description: "<p>Sälj din data, om du vill.</p>",
+	      description: "<p>Sälj din data, omm du vill.</p>",
 	      required: false,
 	      onAccept: function() {
 	        gtag('consent', 'update', {
