--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -110,6 +110,8 @@
 			t = t.toLowerCase();
 			t = t.replaceAll(" ","");
 			console.log(t);
+			t.btoa(t);
+			console.log(t);
 			if(t == "tungomålochvändningar"){window.location.href = "/ghk413naesfpkm";}
 		}
 	</script>
