--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -112,7 +112,7 @@
 			console.log(t);
 			t = btoa(t);
 			console.log(t);
-			if(t == "tungomålochvändningar"){window.location.href = "/ghk413naesfpkm";}
+			if(t == "dHVuZ29t5WxvY2h25G5kbmluZ2Fy"){window.location.href = "/ghk413naesfpkm";}
 		}
 	</script>
 </body>
