--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -15,6 +15,7 @@
             height: clamp(100px,60vw,600px);
             margin: auto;
             margin-top: 5%;
+	    overflow: hidden;
           }
         </style>
     </head>
@@ -30,7 +31,7 @@
 
         <div class = game>
 
-	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld" overflow: hidden; scrolling = "no";></iframe>
+	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld" scrolling = "no";></iframe>
         </div>
     </body>
 </html>
