--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -15,7 +15,10 @@
             height: clamp(100px,60vw,600px);
             margin: auto;
             margin-top: 5%;
-	    overflow: hidden;
+	   -webkit-transform:scale(0.8);
+	    -moz-transform:scale(0.8);
+	    -o-transform:scale(0.8);
+	    -ms-transform:scale(0.8);
           }
         </style>
     </head>
@@ -31,7 +34,7 @@
 
         <div class = game>
 
-	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld" scrolling = "no";></iframe>
+	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld";></iframe>
         </div>
     </body>
 </html>
