--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -11,8 +11,8 @@
             padding: 0px;
           }
           .game{
-            width: clamp(120px,96vw,960px);
-            height: clamp(100px,60vw,600px);
+            width: 144vw;
+            height: 90vw;;
             margin: auto;
             margin-top: 5%;
 	   -webkit-transform:scale(0.8);
