--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -11,14 +11,10 @@
             padding: 0px;
           }
           .game{
-            width: 144vw;
-            height: 90vw;;
+            width: clamp(144px, 96vw, 960px);
+            height: clamp(90px, 60vw, 600px);
             margin: auto;
             margin-top: 5%;
-	   -webkit-transform:scale(0.8);
-	    -moz-transform:scale(0.8);
-	    -o-transform:scale(0.8);
-	    -ms-transform:scale(0.8);
           }
         </style>
     </head>
