--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -30,7 +30,7 @@
 
         <div class = game>
 
-	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld";></iframe>
+	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld"; allowfullscreen;></iframe>
         </div>
     </body>
 </html>
