--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 		
 	</style>
 	
-	<script src = "scripts_ab.js"></script>
+	<!--<script src = "scripts_ab.js"></script>-->
 	
 	<div class = tidning>
 		
