--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WM4CVP9Q"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
-	<script src = "script_closed.js"></script>
+	<!--<script src = "script_closed.js"></script>-->
 	
 	<div id = 'web-header'><script> 
 		fetch('header.html')
@@ -301,7 +301,7 @@
 		
 	</style>
 	
-	<!--<script src = "scripts_ab.js"></script>-->
+	<script src = "scripts_ab.js"></script>
 	
 	<div class = tidning>
 		
