--- a/artikel.html
+++ b/artikel.html
@@ -199,6 +199,11 @@
         </style>
     </head>
     <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WM4CVP9Q"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	    
         <div id = 'web-header'><script> 
 		fetch('header.html')
 			.then(function(resp){return resp.text()})
