--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	
-	<script src = "script_closed.js"></script>
+	<!--<script src = "script_closed.js"></script>-->
 	
 	<div id = 'web-header'><script> 
 		fetch('header.html')
