--- a/artikel.html
+++ b/artikel.html
@@ -244,7 +244,7 @@
 	  </div>
         </div>
 
-	<script src = "script_closed.js"></script>
+	<!--<script src = "script_closed.js"></script>-->
 	    
         <script>
         function content_of_tag(str,tag,start){
