--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -115,6 +115,9 @@
 			if(t == "dHVuZ29t5WxvY2h25G5kbmluZ2Fy"){window.location.href = atob("L2doazQxM25hZXNmcGtt");}
 		}
 	</script>
+
+	<a href="https://drive.google.com/uc?export=download&id=1tSRgBxeYoFB68Y56qUfUQ6ALSSjPNk-J" download>
+	
 </body>
  
 </html>
