--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -116,7 +116,7 @@
 		}
 	</script>
 
-	<a href="https://drive.google.com/uc?export=download&id=1tSRgBxeYoFB68Y56qUfUQ6ALSSjPNk-J" download>
+	<a href="https://drive.google.com/uc?export=download&id=1tSRgBxeYoFB68Y56qUfUQ6ALSSjPNk-J" download> Ladda ner bootleg versionen av jubileumsnumret </a>
 	
 </body>
  
