--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -64,10 +64,10 @@
 			});
 	  </script></div>
 
-	  <p class = "text">Det här är Gaffels hemliga klubb. Om du har tagit dig hit ber vi dig att hålla tyst om det hela.</p>
+	<p class = "text">Det här är Gaffels hemliga klubb. Om du har tagit dig hit ber vi dig att hålla tyst om det hela.</p>
 	<p class = "text">Vill du tipsa gaffel kan du maila oss eller lämna över dina uppgifter till en av våra korrespondenter.</p>
 
-	<a href="https://drive.google.com/uc?export=download&id=1tSRgBxeYoFB68Y56qUfUQ6ALSSjPNk-J" download class = "text"> Ladda ner bootleg versionen av jubileumsnumret </a>
+	<a class = "text" href="https://drive.google.com/uc?export=download&id=1tSRgBxeYoFB68Y56qUfUQ6ALSSjPNk-J" download> Ladda ner bootleg versionen av jubileumsnumret </a>
 	
 </body>
  	
