--- a/ghk413naesfpkm.html
+++ b/ghk413naesfpkm.html
@@ -67,7 +67,7 @@
 	<p class = "text">Det här är Gaffels hemliga klubb. Om du har tagit dig hit ber vi dig att hålla tyst om det hela.</p>
 	<p class = "text">Vill du tipsa gaffel kan du maila oss eller lämna över dina uppgifter till en av våra korrespondenter.</p>
 
-	<a class = "text" href="https://drive.google.com/uc?export=download&id=1tSRgBxeYoFB68Y56qUfUQ6ALSSjPNk-J" download> Ladda ner bootleg versionen av jubileumsnumret </a>
+	<p class = "text"><a href="https://drive.google.com/uc?export=download&id=1tSRgBxeYoFB68Y56qUfUQ6ALSSjPNk-J" download> Ladda ner bootleg versionen av jubileumsnumret </a></p>
 	
 </body>
  	
