--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main47'><script>draw_article_button('main47','fåglar',isMobile)</script></div>	
 			<div id = 'main46'><script>draw_article_button('main46','recension-douglas-diamond',isMobile)</script></div>
 			<div id = 'main45'><script>draw_article_button('main45','4-band-som-kan-ske',isMobile)</script></div>
-			<div id = 'main44'><script>draw_article_button('main44','rutinkontroll-av-fredrik-strage',isMobile)</script></div>			
-
+					
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-apr-25',isMobile)</script></div>
 			<div style = "display: grid;">
@@ -402,6 +402,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>
+			<div id = 'main44'><script>draw_article_button('main44','rutinkontroll-av-fredrik-strage',isMobile)</script></div>	
 			<div id = 'main43'><script>draw_article_button('main43','inne-ute-tidsmaskinen',isMobile)</script></div>
 			<div id = 'main43'><script>draw_article_button('main43','int-civilpolis',isMobile)</script></div>
 			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
