--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 		
 		new_html += `<div style = "width: ${roww}%; margin: 3%; float: left;">
 				
-				<div style = "font-family: georgia; color: white; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> Sveriges farligaste popkulturmagasin, av och för kulturmedelklassen. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Ansvarig utgivare: Elias Rågholm<br>Chef Gaffel Öst: Albin G Carlsson<br><br>Kungliga slottet, 107 70 Stockholm<br>
+				<div style = "font-family: georgia; color: white; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> Sveriges farligaste popkulturmagasin, av och för kulturmedelklassen. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Visionär: Elias Rågholm<br>Chef Gaffel Öst: Albin G Carlsson<br><br>Kungliga slottet, 107 70 Stockholm<br>
 				<a href="mailto:gaffel.magasin@gmail.com" style = "color: #FFFEF7FF">gaffel.magasin@gmail.com</a></div>
     				
 				<div style = "display: inline;">
