--- a/hemliga-klubben-inlogg.html
+++ b/hemliga-klubben-inlogg.html
@@ -90,7 +90,7 @@
 </head>
  
 <body>
-
+	<script src = "script_closed.js"></script>
     <div id = 'web-header'><script> 
 		fetch('header.html')
 			.then(function(resp){return resp.text()})
