--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 		
 		new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
 		if(isMobile == false){
-			new_html += 	`<img src =  "https://i.imgur.com/cq8QUJv.png"
+			new_html += 	`<img src =  "https://i.imgur.com/tZFfr2u.png"
 					style = "width: ${imgw}%; float: right; background: #044827FF;">
 					</img>`
 		}
