--- a/artikel.html
+++ b/artikel.html
@@ -274,6 +274,7 @@
             titel = titel.toUpperCase();
 	    var preamble = content_of_tag(a_str,"ingress",0);
             var bild = content_of_tag(a_str,"bild",0);
+	    var fotograf = content_of_tag("fotograf",0);
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
 	    var datum_post = datum;
