--- a/artikel.html
+++ b/artikel.html
@@ -157,6 +157,13 @@
                   margin-left: 5%;    
                   margin-right: 5%; 
             }
+	    .foto{
+		  font-family: Atkinson-Bold;
+                  font-weight: 400;
+		  text-align: right;
+		  font-size: 1em;
+		  color: black;
+	    }
             .ingress{
                   font-family: Atkinson-Bold;
                   font-weight: 400;
@@ -291,6 +298,7 @@
             
                 buffer = `<div>
                             <img src = ${bild} class = blogg_bild></img>
+			    <div class = foto>${fotograf}</div>
                             <div class = titel>${titel}</div>
 			    <div class = data>${data}</div>
                             <div class = ingress>${preamble}</div>
