--- a/index.html
+++ b/index.html
@@ -366,6 +366,9 @@
 		
 		 document.getElementById("info").innerHTML = new_html;
 		</script>
+		
+		<div id="ww_f24f857955ca2" v='1.3' loc='id' a='{"t":"horizontal","lang":"sv","sl_lpl":1,"ids":["wl68"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#000000","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_whr":3}'><a href="https://weatherwidget.org/" id="ww_f24f857955ca2_u" target="_blank">Widget weather</a></div><script async src="https://app3.weatherwidget.org/js/?id=ww_f24f857955ca2"></script>
+		
 		</div>
 		
 		
@@ -483,13 +486,14 @@
 		  <script>
 		    var ny_html = `
       			<div class = side_div>
-				<div id="ww_f24f857955ca2" v='1.3' loc='id' a='{"t":"horizontal","lang":"sv","sl_lpl":1,"ids":["wl68"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#000000","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_whr":3}'><a href="https://weatherwidget.org/" id="ww_f24f857955ca2_u" target="_blank">Widget weather</a></div><script async src="https://app3.weatherwidget.org/js/?id=ww_f24f857955ca2"></script>
+				
 		        </div>
 	  		<div class = side_div>
 				<img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:100%;height:auto;">
     				<h1 style = "color: white">Gaffel är Sveriges farligaste popkulturmagasin, allt du behöver veta om pop, kultur och popkultur.</h1>
-		        </div>
-	   		`
+		        </div>`
+	   		
+		
 		    console.log([isMobile,window.innerWidth]);
 		    if(!isMobile && window.innerWidth > 1500){
 		      document.getElementById('artiklar_side').innerHTML = ny_html;
