--- a/index.html
+++ b/index.html
@@ -361,9 +361,8 @@
 					      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXmTSdwx7aEKX5HoBTvAlYubZ9bIOpysS0gA&s" alt="" style="width:10%;height:10%;">
 					 </a>
 				</div>
-				<div id="ww_f24f857955ca2" v='1.3' loc='id' a='{"t":"horizontal","lang":"sv","sl_lpl":1,"ids":["wl68"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#000000","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_whr":3,"el_phw":3}'><a href="https://weatherwidget.org/" id="ww_f24f857955ca2_u" target="_blank">Widget weather</a></div><script async src="https://app3.weatherwidget.org/js/?id=ww_f24f857955ca2"></sc`
-
-		new_html += `ript></div></div>`
+				</div>
+    			</div>`
 		
 		 document.getElementById("info").innerHTML = new_html;
 		</script>
