--- a/artikel.html
+++ b/artikel.html
@@ -282,6 +282,7 @@
 	    var preamble = content_of_tag(a_str,"ingress",0);
             var bild = content_of_tag(a_str,"bild",0);
 	    var fotograf = content_of_tag("fotograf",0);
+	    if(fotograf = -1){fotograf = ""}
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
 	    var datum_post = datum;
