--- a/artikel.html
+++ b/artikel.html
@@ -282,6 +282,7 @@
 	    var preamble = content_of_tag(a_str,"ingress",0);
             var bild = content_of_tag(a_str,"bild",0);
 	    var fotograf = content_of_tag("fotograf",0);
+	    console.log(fotograf)
 	    if(fotograf = -1){fotograf = ""}
 	    console.log(fotograf)
 		  
