--- a/artikel.html
+++ b/artikel.html
@@ -283,6 +283,7 @@
             var bild = content_of_tag(a_str,"bild",0);
 	    var fotograf = content_of_tag(a_str,"fotograf",0);
 	    console.log(fotograf)
+	    if(fotograf == "-1"){fotograf = ""}
 		  
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
