--- a/artikel.html
+++ b/artikel.html
@@ -167,7 +167,7 @@
             .ingress{
                   font-family: Atkinson-Bold;
                   font-weight: 400;
-                  
+                  line-height: 0.9;
                   padding-top: 2%;
                   margin-left: 5%; 
                   margin-right: 5%; 
